# pi-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  audio_capture.py  config.py  no-turn-bug.md  plan.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  ruff.toml  start.py  test_audio.py  test_save_audio.py  todos.md  transcribe.py  transcription_tests.py  wake_word.py  websocket_client.py
.ai/: gh-cli.md  pr-review.md
.github/workflows/: release.yml  ruff.yml  tests.yml
assets/: README.md
config/: defaults.toml
docs/: architecture.mermaid  cli.md  releases.md  text-to-speech.md  todos.md  wake-word.md
docs/bugs/: double-audio.md  potential-bugs.md  realtime_websocket_missing_subprotocol.md  responses_audio_missing_modalities.md  speech_player_decoding_gap.md  text-only-responsed.md
docs/refactor/: 01-audio-controller-state-machine.md  02-configuration-module-refactor.md  05-llm-responder-split.md  (+6 more)
tests/: conftest.py  test_assistant.py  test_assistant_prep_service.py  test_assistant_settings.py  test_audio_capture.py  test_audio_capture_session_service.py  test_audio_resampler.py  test_audio_sounddevice.py  test_audio_utils.py  test_cli_app.py  test_cli_controller_actors.py  test_cli_controller_event_bus.py  test_cli_controller_loop_server_stop.py  test_cli_controller_run.py  test_cli_controller_utils.py  test_cli_events.py  test_config.py  test_config_base_helpers.py  test_config_prompts.py  test_config_reset.py  test_config_wake_word.py  test_diagnostics.py  test_logging_utils.py  test_network_websocket_client.py  test_speech_player.py  test_transcription_session.py  test_wake_word.py  test_wake_word_helpers.py  test_wake_word_unit.py
(+128 files in other folders)
