[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-transcription"
version = "0.1.0"
description = "Real-time speech-to-text transcription client for Raspberry Pi."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pi Transcription Contributors" }]
dependencies = [
    "sounddevice>=0.4.6",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "openwakeword>=0.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "pre-commit>=3.7.0",
]

[tool.setuptools]
py-modules = [
    "audio_capture",
    "config",
    "transcribe",
    "test_audio",
    "test_save_audio",
    "transcription_tests",
    "websocket_client",
]
