[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-transcription"
version = "0.1.0"
description = "Real-time speech-to-text transcription client for Raspberry Pi."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Pi Transcription Contributors" }]
dependencies = [
    "sounddevice>=0.4.6",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "openwakeword>=0.6.0",
    "openai>=1.55.0",
]

[project.scripts]
pi-transcription = "pi_transcription.cli.app:main"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "pre-commit>=3.7.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.8",
    "anyio>=4.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
